<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.kdo94.inandout.OrderActivity"
    android:background="@drawable/order_background"
    android:columnCount="3"
    android:id="@+id/inAndOutGridLayout"
    android:nestedScrollingEnabled="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/place_order"
        android:id="@+id/textView"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/double_bgr"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/doubleCostTextView"
        android:layout_column="1"
        android:layout_row="1"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/doubleEditText"
        android:layout_column="2"
        android:layout_row="1"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cheese_bgr"
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_row="2"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/cheeseCostTextView"
        android:layout_column="1"
        android:layout_row="2"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/cheeseEditText"
        android:layout_row="2"
        android:layout_column="2"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fries"
        android:id="@+id/textView4"
        android:layout_column="0"
        android:layout_row="3"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/friesCostTextView"
        android:layout_column="1"
        android:layout_row="3"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/friesEditText"
        android:layout_row="3"
        android:layout_column="2"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shake"
        android:id="@+id/textView5"
        android:layout_column="0"
        android:layout_row="4"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/shakesCostTextView"
        android:layout_column="1"
        android:layout_row="4"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/shakesEditText"
        android:layout_column="2"
        android:layout_row="4"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/soda"
        android:id="@+id/textView6"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/soda_small"
        android:id="@+id/textView7"
        android:layout_column="0"
        android:layout_row="6"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/sodaSmallCostTextView"
        android:layout_row="6"
        android:layout_column="1"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sodaSmallEditText"
        android:layout_column="2"
        android:layout_row="6"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/soda_medium"
        android:id="@+id/textView8"
        android:layout_column="0"
        android:layout_row="7"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/sodaMediumCostTextView"
        android:layout_column="1"
        android:layout_row="7"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sodaMediumEditText"
        android:layout_column="2"
        android:layout_row="7"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/soda_large"
        android:id="@+id/textView9"
        android:layout_column="0"
        android:layout_row="8"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/sodaLargeCostTextView"
        android:layout_row="8"
        android:layout_column="1"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sodaLargeEditText"
        android:layout_column="2"
        android:layout_row="8"
        android:backgroundTint="#000000"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:id="@+id/button"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="9"
        android:layout_gravity="center_horizontal"
        android:onClick="activateOrderSummary" />

</GridLayout>
